--- a/index.html
+++ b/index.html
@@ -5,25 +5,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mi página de estilos</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="inputs.css"
+        <link rel="stylesheet" href="inputs.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <h1>Estilos CSS</h1>
-        <hr>
+        <header>
+            <h1>Estilos CSS</h1>
+        </header>
         <div class="box">
             <div>
                 <h3>Input estilo google</h3>
                 <div class="input-container">
-                    <input type="text" id="name" required>
-                    <label for="name">Nombre</label>
+                    <input type="text" id="input1" required>
+                    <label for="input1">Nombre</label>
+                </div>
+                <div class="link">
+                    <a href="https://github.com/malonsoindev/styles/blob/8553270446e422d867840ebd69b3e8eb93eefe29/inputs/input1.css" target="_blank" title="Enlace al código">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
                 </div>
             </div>
         
             <div>
                 <h3>Input estilo outline</h3>
                 <div class="input-container2">
-                    <input type="text" id="name" required>
-                    <label for="name">Nombre</label>
+                    <input type="text" id="input2" required>
+                    <label for="input2">Nombre</label>
+                </div>
+                <div class="link">
+                    <a href="https://github.com/malonsoindev/styles/blob/8553270446e422d867840ebd69b3e8eb93eefe29/inputs/input2.css" target="_blank" title="Enlace al código">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div>
+                <h3>Input estilo outline - Interno</h3>
+                <div class="input-container3">
+                    <input type="text" id="input3" required>
+                    <label for="input3">Nombre</label>
+                </div>
+                <div class="link">
+                    <a href="https://github.com/malonsoindev/styles/blob/8553270446e422d867840ebd69b3e8eb93eefe29/inputs/input3.css" target="_blank" title="Enlace al código">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
                 </div>
             </div>
         </div>
